Fix comment header alignment

--- a/app/assets/stylesheets/components/comment.scss
+++ b/app/assets/stylesheets/components/comment.scss
@@ -42,6 +42,7 @@
   h2 {
     color: $blue;
     margin-right: 10px;
+    padding: 10px 0;
   }
 }
 
